[tool.poetry]
name = "first-poetry-package"
version = "0.1.0"
description = ""
authors = ["MuhammadAizazA <aizaz.ali.shah.0205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
